fixed button on mobile view

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -67,7 +67,7 @@ align-items: center;
     flex-basis: 60%;
 }
 &__send-btn{
-    width: 25%;
+    width: 40%;
     background-color: $theme-main;
     border: 3px $theme-secondary solid;
     margin-top: 10px;
@@ -79,6 +79,9 @@ align-items: center;
     transition: .4s;
     &:hover{
         letter-spacing: 4px;
+    }
+    @media($desktop) {
+        width: 25%;
     }
 }
 &__btn-wraper{
